--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,17 @@
     <nav>
       <ul class="header_button">
         <li class="header_button"; style="float: left"><a href="#index">POLL.IO</a></li>
+        <li class="header_button"; style="float: right"><a>Sort</a></li>
         <li class="header_button"; style="float: right"><a href="/account">Login</a></li>
-        <li class="header_button"; style="float: right"><a href="/account">Sign Up</a></li>
+        <li class="header_button"; style="float: right"><a href="/signup">Sign Up</a></li>
       </ul>
     </nav>
     
   </div>
   <div>
+    <header id="down_gradient"> </header>
     <app-root></app-root>
+    <footer id="up_gradient"></footer>
   </div>
 
 </body>
