--- a/src/index.html
+++ b/src/index.html
@@ -1,31 +1,27 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Frontend</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-
-  <!-- Navigation Bar and Home button -->
-  <div>
-    <nav>
-      <ul class="header_button">
-        <li class="header_button"; style="float: left"><a href="#index">POLL.IO</a></li>
-        <li class="header_button"; style="float: right"><a>Sort</a></li>
-        <li class="header_button"; style="float: right"><a href="/account">Login</a></li>
-        <li class="header_button"; style="float: right"><a href="/signup">Sign Up</a></li>
-      </ul>
-    </nav>
-    
-  </div>
-  <div>
-    <header id="down_gradient"> </header>
-    <app-root></app-root>
-    <footer id="up_gradient"></footer>
-  </div>
-
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Frontend</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+  </head>
+  <body>
+    <!-- Navigation Bar and Home button -->
+    <div>
+      <nav>
+        <ul class="header_button">
+          <li class="header_button"; style="float: left"><a href="./poll">POLL.IO</a></li>
+          <li class="header_button"; style="float: right"><a href="./summary">Account Summary</a></li>
+          <li class="header_button"; style="float: right"><a href="./login">Login</a></li>
+          <li class="header_button"; style="float: right"><a href="./signup">Sign Up</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div>
+      <!-- Where the app resides -->
+      <app-root></app-root>
+    </div>
+  </body>
 </html>
