--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <div>
       <nav>
         <ul class="header_button">
-          <li class="header_button"; style="float: left"><a href="./poll">POLL.IO</a></li>
+          <li class="header_button"; style="float: left"; id="home-button"><a href="./poll">POLL.IO</a></li>
           <li class="header_button"; style="float: right"><a href="./summary">Account Summary</a></li>
           <li class="header_button"; style="float: right"><a href="./login">Login</a></li>
           <li class="header_button"; style="float: right"><a href="./signup">Sign Up</a></li>
