Now it's feelin' better

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <!-- Navigation Bar and Home button -->
-    <div>
-      <nav>
+    <div class="stick-to-top">
+      <nav class="underlay">
         <ul class="header_button">
           <li class="header_button"; style="float: left"; id="home-button"><a href="./poll">POLL.IO</a></li>
           <li class="header_button"; style="float: right"><a href="./summary">Account Summary</a></li>
