--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <div class="page">
       <div class="header">
         <ul>
-          <li style="float: left"  id="home-button"><a href="./poll" class="logo">POLL.IO</a></li>
+          <li style="float: left"; id="home-button"><a href="./poll">POLL.IO</a></li>
           <li style="float: right"><a href="./summary">Account Summary</a></li>
           <li style="float: right"><a href="./login">Login</a></li>
           <li style="float: right"><a href="./signup">Sign Up</a></li>
