WE GOT GRADIENTS NOW

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,8 @@
         </ul>
       </div>
       <div class="content"><app-root></app-root></div>
+      <div class="up-gradient"></div>
     </div>
+
   </body>
 </html>
