--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <html lang="en">
-
   <head>
     <meta charset="utf-8">
     <title>Frontend</title>
@@ -8,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
-
   <body>
     <!-- Navigation Bar and Home button -->
     <div>
@@ -19,8 +17,11 @@
           <li class="header_button"; style="float: right"><a href="./login">Login</a></li>
           <li class="header_button"; style="float: right"><a href="./signup">Sign Up</a></li>
         </ul>
-      </div>
-      <div class="content"><app-root></app-root></div>
+      </nav>
+    </div>
+    <div>
+      <!-- Where the app resides -->
+      <app-root></app-root>
     </div>
   </body>
 </html>
