Moved main page styles to app component and moved the logout button to the nav bar

--- a/src/index.html
+++ b/src/index.html
@@ -10,20 +10,6 @@
   </head>
 
   <body>
-    <div class="page">
-      <div class="header">
-        <ul>
-          <li style="float: left"; id="home-button"><a href="./poll">POLL.OCK</a></li>
-          <li style="float: right"><a href="./summary">Account Summary</a></li>
-          <li style="float: right"><a href="./login">Login</a></li>
-          <li style="float: right"><a href="./signup">Sign Up</a></li>
-        </ul>
-      </div>
-      <div class="content"><app-root></app-root></div>
-      <div class="up-gradient">
-        <div class="fish">𓆟</div>
-      </div>
-    </div>
-
+    <app-root></app-root>
   </body>
 </html>
